// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomButton should render text 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Submit
  </Text>
</View>
`;

exports[`CustomButton should render with undefined text 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
</View>
`;
